test/compile_errors/err_shadowing_non_consuming_rebind.w
//! expect-check-fail: shadowing is not allowed for 'x'

fn main:
    let x = 1
    let x = x + 1
    print(f"{x}")
